--- a/simple/simple.cabal
+++ b/simple/simple.cabal
@@ -16,7 +16,7 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     EmbedString
-  build-depends:       base >= 4.7 && < 5
+  build-depends:       base
                      , template-haskell
   default-language:    Haskell2010
 
